--- a/RichCanvasDemo/MainWindow.xaml
+++ b/RichCanvasDemo/MainWindow.xaml
@@ -33,7 +33,8 @@
         <richCanvas:RichItemsControl ItemsSource="{Binding Items}"
                                      Grid.Row="1"
                                      Name="source"
-                                     OnDrawEnded="RichItemsControl_OnDrawEnded">
+                                     OnDrawEnded="RichItemsControl_OnDrawEnded"
+                                     DisableAutoPanning="False">
             <richCanvas:RichItemsControl.Resources>
                 <DataTemplate DataType="{x:Type vm:Rectangle}">
                     <Rectangle Fill="Red"
