Refactor + API Props + Adorners WIP

--- a/RichCanvas/Styles/RichItemContainerStyle.xaml
+++ b/RichCanvas/Styles/RichItemContainerStyle.xaml
@@ -9,7 +9,9 @@
                             BorderThickness="1"
                             Background="Transparent"
                             IsHitTestVisible="True">
-                        <ContentPresenter></ContentPresenter>
+                        <AdornerDecorator>
+                            <ContentPresenter></ContentPresenter>
+                        </AdornerDecorator>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
